# FileSearchEngine

./: .gitignore  .travis.yml  AboutCommand_8h_source.html  AddFileCommand_8h_source.html  BasicCommunicationService_8h_source.html  CMakeLists.txt  CommandConstant_8h_source.html  CommandFactory_8h_source.html  CommandHelper_8h_source.html  CommandNotExistsException_8h_source.html  DeleteFileCommand_8h_source.html  ExitCommand_8h_source.html  FileContent_8h_source.html  FileEntity_8h_source.html  FileHelper_8h_source.html  FileName_8h_source.html  HelpCommand_8h_source.html  ICommand_8h_source.html  InvalidFileContentException_8h_source.html  InvalidFileNameException_8h_source.html  InvalidPositiveNumberException_8h_source.html  InvalidQueryException_8h_source.html  PositiveNumber_8h_source.html  README.md  SearchCommand_8h_source.html  SearchResultCollection_8h_source.html  SearchResultEntityFactory_8h_source.html  SearchResultEntity_8h_source.html  TranslationService_8h_source.html  annotated.html  classAboutCommand-members.html  classAboutCommand.html  classAboutCommand__coll__graph.md5  classAboutCommand__inherit__graph.map  classAddFileCommand-members.html  classAddFileCommand.html  classAddFileCommand__coll__graph.map  classAddFileCommand__inherit__graph.dot  classAddFileCommand__inherit__graph.md5  classBasicCommunicationService-members.html  (+156 more)
ci/: Doxyfile.in  docs_deploy.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  (+15 more)
(+53 files in other folders)
